Atualiza links dos projetos para Netlify

--- a/index.html
+++ b/index.html
@@ -347,36 +347,36 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <h3>Restô Sabor</h3>
-                    <p>Site de restaurante com menu digital e integração com WhatsApp.</p>
+                    <p>Site para restaurante com cardápio online e integração com WhatsApp</p>
                     <div class="project-links">
-                        <a href="https://resto-sabor.vercel.app" target="_blank">
+                        <a href="https://resto-sabor-jean.netlify.app" target="_blank">
                             <i class="fas fa-external-link-alt"></i> Visualizar
                         </a>
-                        <a href="#" target="_blank">
+                        <a href="https://github.com/jpiber/resto-sabor-jean" target="_blank">
                             <i class="fab fa-github"></i> Código
                         </a>
                     </div>
                 </div>
                 <div class="project-card">
                     <h3>Treine Fácil</h3>
-                    <p>Landing page para personal trainer com botão de contato e galeria de treinos.</p>
+                    <p>Landing page para personal trainer com galeria de treinos</p>
                     <div class="project-links">
-                        <a href="https://treine-facil.netlify.app" target="_blank">
+                        <a href="https://treine-facil-jean.netlify.app" target="_blank">
                             <i class="fas fa-external-link-alt"></i> Visualizar
                         </a>
-                        <a href="#" target="_blank">
+                        <a href="https://github.com/jpiber/treine-facil-jean" target="_blank">
                             <i class="fab fa-github"></i> Código
                         </a>
                     </div>
                 </div>
                 <div class="project-card">
                     <h3>Loja Bella</h3>
-                    <p>Site para loja de roupas com catálogo simples e layout responsivo.</p>
+                    <p>E-commerce de roupas com catálogo e carrinho de compras</p>
                     <div class="project-links">
-                        <a href="https://lojabella-demo.github.io" target="_blank">
+                        <a href="https://loja-bella-jean.netlify.app" target="_blank">
                             <i class="fas fa-external-link-alt"></i> Visualizar
                         </a>
-                        <a href="#" target="_blank">
+                        <a href="https://github.com/jpiber/loja-bella-jean" target="_blank">
                             <i class="fab fa-github"></i> Código
                         </a>
                     </div>
