Adiciona favicons personalizados para todos os sites

--- a/loja-bella/index.html
+++ b/loja-bella/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loja Bella - Moda Feminina</title>
+    <link rel="icon" type="image/png" href="https://img.icons8.com/color/48/000000/shopping-bag.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root {
@@ -345,7 +346,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="https://images.unsplash.com/photo-1551163943-3f7fffb4f2e4?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Blusa Básica" class="product-image">
+                    <img src="https://images.unsplash.com/photo-1583743814966-8936f5b7be1a?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Blusa Básica" class="product-image">
                     <div class="product-info">
                         <h3>Blusa Básica</h3>
                         <p>Blusa de algodão com gola V</p>
