--- a/treine-facil/index.html
+++ b/treine-facil/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treine Fácil - Personal Trainer</title>
+    <link rel="icon" type="image/png" href="https://img.icons8.com/color/48/000000/dumbbell.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root {
