--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfólio de Jean Piber - Desenvolvedor Web especializado em sites modernos e responsivos">
-    <title>Jean Piber - Desenvolvedor Web</title>
-    <link rel="icon" type="image/png" href="https://img.icons8.com/fluency/48/00ff00/jp.png">
+    <title>Jean Piber - Portfólio</title>
+    <link rel="icon" type="image/png" href="favicon-16x16.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root {
