--- a/resto-sabor/index.html
+++ b/resto-sabor/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restô Sabor - Cardápio Digital</title>
-    <link rel="icon" type="image/png" href="https://img.icons8.com/color/48/000000/restaurant.png">
+    <link rel="icon" type="image/png" href="../favicon-16x16.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root {
