--- a/treine-facil/index.html
+++ b/treine-facil/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Treine Fácil - Personal Trainer</title>
-    <link rel="icon" type="image/png" href="https://img.icons8.com/color/48/000000/dumbbell.png">
+    <title>Treine Fácil - Academia</title>
+    <link rel="icon" type="image/png" href="../favicon-16x16.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root {
