--- a/loja-bella/index.html
+++ b/loja-bella/index.html
@@ -337,28 +337,28 @@
             <h2>Produtos em Destaque</h2>
             <div class="products-grid">
                 <div class="product-card">
-                    <img src="https://images.unsplash.com/photo-1572804013309-59a88b7e92f1?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Vestido Floral" class="product-image">
+                    <img src="https://images.unsplash.com/photo-1434389677669-e08b4cac3105" alt="Vestido Floral" class="product-image">
                     <div class="product-info">
                         <h3>Vestido Floral</h3>
                         <p>Vestido midi com estampa floral</p>
-                        <p class="price">R$ 199,90</p>
+                        <p class="price">R$ 189,90</p>
                         <button class="add-to-cart">Adicionar ao Carrinho</button>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="https://images.unsplash.com/photo-1583743814966-8936f5b7be1a?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Blusa Básica" class="product-image">
+                    <img src="https://images.unsplash.com/photo-1551163943-3f7fffb4f4e0" alt="Blusa de Tricô" class="product-image">
                     <div class="product-info">
-                        <h3>Blusa Básica</h3>
-                        <p>Blusa de algodão com gola V</p>
-                        <p class="price">R$ 89,90</p>
+                        <h3>Blusa de Tricô</h3>
+                        <p>Blusa de tricô com detalhes em renda</p>
+                        <p class="price">R$ 129,90</p>
                         <button class="add-to-cart">Adicionar ao Carrinho</button>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="https://images.unsplash.com/photo-1541099649105-f69ad21f3246?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Calça Jeans" class="product-image">
+                    <img src="https://images.unsplash.com/photo-1551232864-3f0890e580d9" alt="Calça Jeans" class="product-image">
                     <div class="product-info">
                         <h3>Calça Jeans</h3>
-                        <p>Calça skinny de alta cintura</p>
+                        <p>Calça jeans skinny com lavagem média</p>
                         <p class="price">R$ 159,90</p>
                         <button class="add-to-cart">Adicionar ao Carrinho</button>
                     </div>
