Atualiza links do favicon para .ico

--- a/loja-bella/index.html
+++ b/loja-bella/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loja Bella - Moda Feminina</title>
-    <link rel="icon" type="image/png" href="../favicon-16x16.png">
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root {
@@ -337,7 +337,7 @@
             <h2>Produtos em Destaque</h2>
             <div class="products-grid">
                 <div class="product-card">
-                    <img src="https://images.unsplash.com/photo-1434389677669-e08b4cac3105" alt="Vestido Floral" class="product-image">
+                    <img src="https://images.pexels.com/photos/972995/pexels-photo-972995.jpeg" alt="Vestido Floral" class="product-image">
                     <div class="product-info">
                         <h3>Vestido Floral</h3>
                         <p>Vestido midi com estampa floral</p>
@@ -346,7 +346,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="https://images.unsplash.com/photo-1551163943-3f7fffb4f4e0" alt="Blusa de Tricô" class="product-image">
+                    <img src="https://images.pexels.com/photos/6311387/pexels-photo-6311387.jpeg" alt="Blusa de Tricô" class="product-image">
                     <div class="product-info">
                         <h3>Blusa de Tricô</h3>
                         <p>Blusa de tricô com detalhes em renda</p>
@@ -355,7 +355,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="https://images.unsplash.com/photo-1551232864-3f0890e580d9" alt="Calça Jeans" class="product-image">
+                    <img src="https://images.pexels.com/photos/1598507/pexels-photo-1598507.jpeg" alt="Calça Jeans" class="product-image">
                     <div class="product-info">
                         <h3>Calça Jeans</h3>
                         <p>Calça jeans skinny com lavagem média</p>
