--- a/resto-sabor/index.html
+++ b/resto-sabor/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restô Sabor - Cardápio Digital</title>
-    <link rel="icon" type="image/png" href="../favicon-16x16.png">
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root {
@@ -196,19 +196,19 @@
                     <p class="price">R$ 52,90</p>
                 </div>
                 <div class="menu-item">
-                    <img src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c" alt="Salada Caesar">
+                    <img src="https://images.pexels.com/photos/1211887/pexels-photo-1211887.jpeg" alt="Salada Caesar">
                     <h3>Salada Caesar</h3>
                     <p>Alface romana, frango grelhado, croutons, queijo parmesão e molho caesar</p>
                     <span class="price">R$ 32,90</span>
                 </div>
                 <div class="menu-item">
-                    <img src="https://images.unsplash.com/photo-1563379926898-05f4575a45d8" alt="Risoto de Cogumelos">
+                    <img src="https://images.pexels.com/photos/6287525/pexels-photo-6287525.jpeg" alt="Risoto de Cogumelos">
                     <h3>Risoto de Cogumelos</h3>
                     <p>Arroz arbóreo, mix de cogumelos, cebola, alho, vinho branco e queijo parmesão</p>
                     <span class="price">R$ 45,90</span>
                 </div>
                 <div class="menu-item">
-                    <img src="https://images.unsplash.com/photo-1565299624946-b28f40a0ae38" alt="Pizza Margherita">
+                    <img src="https://images.pexels.com/photos/825661/pexels-photo-825661.jpeg" alt="Pizza Margherita">
                     <h3>Pizza Margherita</h3>
                     <p>Molho de tomate, mussarela, tomate cereja, manjericão e azeite</p>
                     <span class="price">R$ 49,90</span>
