--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         header {
             background: rgba(26, 26, 26, 0.95);
-            padding: 1.5rem 0;
+            padding: 0.5rem 0;
             box-shadow: 0 2px 20px rgba(0, 255, 157, 0.1);
             position: sticky;
             top: 0;
@@ -51,12 +51,12 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 0 2rem;
+            padding: 0 1rem;
         }
 
         .nav-links {
             display: flex;
-            gap: 2rem;
+            gap: 1rem;
         }
 
         .nav-links a {
@@ -65,6 +65,7 @@
             font-weight: 500;
             transition: all 0.3s ease;
             position: relative;
+            font-size: 0.9rem;
         }
 
         .nav-links a::after {
@@ -84,6 +85,11 @@
 
         .nav-links a:hover {
             color: var(--primary-color);
+        }
+
+        nav h1 {
+            font-size: 2rem;
+            font-weight: 700;
         }
 
         .hero {
