Adiciona descrição sobre projetos serem demonstrativos

--- a/index.html
+++ b/index.html
@@ -349,8 +349,9 @@
             </div>
         </section>
 
-        <section class="section" id="projetos">
+        <section id="projetos" class="section">
             <h2>Projetos</h2>
+            <p class="section-description">Projetos demonstrativos desenvolvidos para praticar e demonstrar habilidades em desenvolvimento web.</p>
             <div class="projects-grid">
                 <div class="project-card">
                     <h3>Restô Sabor</h3>
